--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "nodemailer": "^6.10.1",
-    "tailwindcss": "^4.1.5"
+    "nodemailer": "^6.10.1"
   }
 }
